# Fullstackanswer

./: README.md  fetcher.py  main.py  pyproject.toml
