[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
xmltodict = "^0.13.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
